changed test text neutral

--- a/app/src/main/res/layout/view_fireproof_website_description.xml
+++ b/app/src/main/res/layout/view_fireproof_website_description.xml
@@ -29,5 +29,5 @@
         android:textColor="?attr/settingsMinorTextColor"
         android:textSize="14sp"
         android:textStyle="normal"
-        tools:text="Bookmark" />
+        tools:text="Lorem ipsum dolor sit amet" />
 </LinearLayout>
