fix color reference pointing to wrong attribute

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -220,7 +220,7 @@
     </style>
 
     <style name="PopUpMenuSwitchTheme">
-        <item name="colorAccent">?colorAccent</item>
+        <item name="colorAccent">@color/cornflowerBlue</item>
         <item name="android:textColorSecondary">?bottomBarIconColor</item>
     </style>
 
