--- a/app/src/main/res/color/bottom_bar_icon_color_selector.xml
+++ b/app/src/main/res/color/bottom_bar_icon_color_selector.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <!--
   ~ Copyright (c) 2018 DuckDuckGo
   ~
@@ -17,6 +16,6 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/subtleGray" android:state_enabled="false" />
-    <item android:color="@color/brownishGray" />
+    <item android:state_enabled="false" android:color="?attr/bottomBarIconColorDisabled" />
+    <item android:state_enabled="true" android:color="?bottomBarIconColor"/>
 </selector>
