--- a/app/src/main/res/layout/fragment_browser_tab.xml
+++ b/app/src/main/res/layout/fragment_browser_tab.xml
@@ -19,10 +19,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_scrollFlags="scroll|enterAlways">
+    android:layout_height="match_parent">
 
     <include layout="@layout/include_omnibar_toolbar" />
+
+    <com.duckduckgo.app.browser.ui.BottomNavigationBar
+        android:id="@+id/bottomNavigationBar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/bottomBarHeight"
+        android:layout_gravity="bottom"
+        android:background="@drawable/bottom_navigation_bar_bg"
+        android:elevation="8dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layoutResource="@layout/layout_browser_bottom_navigation_bar"
+        app:layout_behavior="com.duckduckgo.app.browser.ui.BottomNavigationBehavior" />
+
+    <include
+        android:id="@+id/defaultCard"
+        layout="@layout/content_onboarding_default_browser_card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
         android:id="@+id/webViewFullScreenContainer"
@@ -60,8 +81,7 @@
         android:layout_height="match_parent"
         android:animateLayoutChanges="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="com.duckduckgo.app.browser.BrowserActivity"
-        tools:menu="@menu/menu_browser_activity">
+        tools:context="com.duckduckgo.app.browser.BrowserActivity">
 
         <FrameLayout
             android:id="@+id/webViewContainer"
