--- a/app/src/main/res/layout/content_privacy_dashboard.xml
+++ b/app/src/main/res/layout/content_privacy_dashboard.xml
@@ -47,8 +47,8 @@
                 android:id="@+id/httpsContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toTopOf="@id/networksContainer"
-                android:onClick="onEncryptionClicked">
+                android:onClick="onEncryptionClicked"
+                app:layout_constraintBottom_toTopOf="@id/networksContainer">
 
                 <ImageView
                     android:id="@+id/httpsIcon"
@@ -126,8 +126,8 @@
                 android:textColor="@android:color/white"
                 android:textSize="14sp"
                 android:textStyle="normal"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.SwitchCompat
@@ -141,51 +141,55 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
         <LinearLayout
             android:id="@+id/buttonContainer"
             android:layout_width="match_parent"
-            app:layout_constraintTop_toBottomOf="@id/privacyToggleContainer"
             android:layout_height="50dp"
             android:background="@color/white"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp">
+            app:layout_constraintTop_toBottomOf="@id/privacyToggleContainer">
 
             <TextView
                 android:id="@+id/whitelistButton"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="?selectableItemBackground"
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
                 android:text="@string/manageWhitelist"
                 android:textColor="@android:color/black"
                 android:textSize="14sp"
-                android:layout_weight="1"
                 android:textStyle="normal"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <View
                 android:layout_width="1dp"
-                android:background="@color/grayish"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
+                android:background="@color/grayish" />
 
             <TextView
                 android:id="@+id/brokenSiteButton"
-                android:gravity="center"
-                android:layout_weight="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="?selectableItemBackground"
                 android:fontFamily="sans-serif-medium"
+                android:gravity="center"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
                 android:text="@string/reportBrokenSite"
                 android:textColor="@android:color/black"
                 android:textSize="14sp"
                 android:textStyle="normal"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
 
         </LinearLayout>
 
