--- a/app/src/main/res/values/string-untranslated.xml
+++ b/app/src/main/res/values/string-untranslated.xml
@@ -33,10 +33,29 @@
     <string name="stickySearchPromptRemove">Remove</string>
     <string name="notificationChannelSearch">Search</string>
 
-    <!-- String changed translate and replace -->
+    <!-- !! String changed translate and replace !! -->
     <string name="privacyProtectionToggle">Site Privacy Protection</string>
+    <string name="privacyProtectionEnabled">SITE PROTECTION ENABLED</string>
+    <string name="privacyProtectionDisabled">SITE PROTECTION DISABLED</string>
 
     <!-- New dashboard / menu buttons -->
     <string name="manageWhitelist">Manage Whitelist</string>
     <string name="reportBrokenSite">Report Broken Site</string>
+
+    <!-- Dialogs -->
+    <string name="dialogAddTitle">Add</string>
+    <string name="dialogEditTitle">Edit</string>
+
+    <!-- Whitelist -->
+    <string name="whitelisetActivityTitle">Whitelist</string>
+    <string name="whitelistEntryOverflowContentDescription">More options for whitelist entry %s</string>
+    <string name="whitelistEntryAddTitle">Add to Whitelist</string>
+    <string name="whitelistEntryDeleteConfirmMessage">Are you sure you want to delete &lt;b>%s&lt;/b> from whitelist?</string>
+    <string name="whitelistExplanation">These whitelisted sites will not be upgraded by Privacy Protection</string>
+    <string name="whitelistNoEntries">No whitelisted sites yet</string>
+    <string name="whitelistDomainHint">www.example.com</string>
+
+    <!-- Settings -->
+    <string name="settingsPrivacyProtectionWhitelist">Privacy Protection Whitelist</string>
+
 </resources>
