fix pink color showing for overflow menu icon on api 21-23

--- a/app/src/main/res/layout/view_bookmark_entry.xml
+++ b/app/src/main/res/layout/view_bookmark_entry.xml
@@ -85,6 +85,7 @@
         android:layout_height="0dp"
         android:background="?android:attr/selectableItemBackground"
         android:scaleType="center"
+        android:tint="?attr/bookmarkIconColor"
         android:src="@drawable/ic_overflow_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
