--- a/app/src/main/res/layout/popup_window_browser_bottom_tab_menu.xml
+++ b/app/src/main/res/layout/popup_window_browser_bottom_tab_menu.xml
@@ -53,6 +53,11 @@
                 android:text="@string/addBookmarkMenuTitle" />
 
             <TextView
+                android:id="@+id/fireproofWebsitePopupMenuItem"
+                style="@style/BrowserTextMenuItem"
+                android:text="@string/fireproofWebsiteMenuTitle" />
+
+            <TextView
                 android:id="@+id/findInPageMenuItem"
                 style="@style/BrowserTextMenuItem"
                 android:text="@string/findInPageMenuTitle" />
