--- a/app/src/main/res/layout/include_omnibar_toolbar.xml
+++ b/app/src/main/res/layout/include_omnibar_toolbar.xml
@@ -57,13 +57,6 @@
                         android:paddingStart="6dp"
                         android:paddingEnd="6dp">
 
-                        <androidx.constraintlayout.widget.ConstraintLayout
-                            android:id="@+id/networksContainer"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent" />
-
                         <FrameLayout
                             android:id="@+id/omnibarIconContainer"
                             android:layout_width="wrap_content"
@@ -72,28 +65,34 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent">
 
+                            <LinearLayout
+                                android:id="@+id/animationContainer"
+                                android:orientation="horizontal"
+                                android:gravity="center"
+                                android:paddingStart="10dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                tools:ignore="RtlSymmetry" >
+                            </LinearLayout>
+
                             <ImageButton
                                 android:id="@+id/privacyGradeButton"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_height="match_parent"
+                                android:gravity="center"
+                                android:padding="4dp"
                                 android:background="?attr/selectableItemBackgroundBorderless"
                                 android:contentDescription="@string/privacyGradeContentDescription"
-                                android:padding="4dp"
-                                android:src="@drawable/privacygrade_icon_a"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
+                                android:src="@drawable/privacygrade_icon_loading" />
 
                             <ImageView
                                 android:id="@+id/searchIcon"
                                 android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_height="match_parent"
+                                android:gravity="center"
                                 android:contentDescription="@string/privacyGradeContentDescription"
                                 android:padding="4dp"
-                                android:src="@drawable/ic_loupe_24dp"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
+                                android:src="@drawable/ic_loupe_24dp" />
 
                         </FrameLayout>
 
