--- a/app/src/main/res/drawable/background_tracker_logo.xml
+++ b/app/src/main/res/drawable/background_tracker_logo.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (c) 2020 DuckDuckGo
   ~
@@ -16,8 +17,7 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="?attr/toolbarIconColor" />
-    <stroke android:width="2dp" android:color="?attr/omnibarRoundedFieldBackgroundColor" />
+    <solid android:color="?attr/omnibarRoundedFieldBackgroundColor" />
     <size
         android:height="26dp"
         android:width="26dp" />
