--- a/app/src/main/res/layout/view_bookmark_entry.xml
+++ b/app/src/main/res/layout/view_bookmark_entry.xml
@@ -74,10 +74,11 @@
         android:id="@+id/overflowMenu"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:background="?android:attr/selectableItemBackground"
+        android:background="?selectableItemBackground"
         android:paddingStart="14dp"
         android:paddingEnd="14dp"
         android:scaleType="center"
+        android:tint="?toolbarIconColor"
         android:src="@drawable/ic_overflow_bookmarks_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
