Add browser menu item, error messages and more tests

--- a/app/src/main/res/layout/popup_window_browser_bottom_tab_menu.xml
+++ b/app/src/main/res/layout/popup_window_browser_bottom_tab_menu.xml
@@ -77,6 +77,11 @@
                 android:text="@string/requestDesktopSiteMenuTitle" />
 
             <TextView
+                android:id="@+id/whitelistPopupMenuItem"
+                style="@style/BrowserTextMenuItem"
+                android:text="@string/whitelistAdd" />
+
+            <TextView
                 android:id="@+id/brokenSitePopupMenuItem"
                 style="@style/BrowserTextMenuItem"
                 android:text="@string/brokenSiteReportBrokenSiteMenuItem" />
