--- a/app/src/main/res/values/string-untranslated.xml
+++ b/app/src/main/res/values/string-untranslated.xml
@@ -47,12 +47,14 @@
 
     <!-- Whitelist -->
     <string name="whitelisetActivityTitle">Whitelist</string>
+    <string name="whitelistAdd">Add to Whitelist</string>
+    <string name="whitelistRemove">Remove from Whitelist</string>
     <string name="whitelistEntryOverflowContentDescription">More options for whitelist entry %s</string>
-    <string name="whitelistEntryAddTitle">Add to Whitelist</string>
     <string name="whitelistEntryDeleteConfirmMessage">Are you sure you want to delete &lt;b>%s&lt;/b> from whitelist?</string>
     <string name="whitelistExplanation">These whitelisted sites will not be upgraded by Privacy Protection</string>
     <string name="whitelistNoEntries">No whitelisted sites yet</string>
     <string name="whitelistDomainHint">www.example.com</string>
+    <string name="whitelistFormatError">Could not save, enter a domain like <b>example.com</b></string>
 
     <!-- Settings -->
     <string name="settingsPrivacyProtectionWhitelist">Privacy Protection Whitelist</string>
