moving stringRes into xml item layout and remove bind logic from adapter

--- a/app/src/main/res/layout/view_fireproof_website_description.xml
+++ b/app/src/main/res/layout/view_fireproof_website_description.xml
@@ -29,5 +29,6 @@
         android:textColor="?attr/settingsMinorTextColor"
         android:textSize="14sp"
         android:textStyle="normal"
+        android:text="@string/fireproofWebsiteFeatureDescription"
         tools:text="Lorem ipsum dolor sit amet" />
 </LinearLayout>
