--- a/app/src/main/res/layout/view_fireproof_website_empty_hint.xml
+++ b/app/src/main/res/layout/view_fireproof_website_empty_hint.xml
@@ -33,5 +33,6 @@
         android:textColor="?attr/fireproofWebsiteTitleTextColor"
         android:textSize="16sp"
         android:textStyle="normal"
+        android:text="@string/fireproofWebsiteEmptyListHint"
         tools:text="Lorem ipsum dolor sit amet" />
 </LinearLayout>
