--- a/app/src/main/res/layout/view_whitelist_entry.xml
+++ b/app/src/main/res/layout/view_whitelist_entry.xml
@@ -56,6 +56,7 @@
         android:paddingEnd="14dp"
         android:scaleType="center"
         android:src="@drawable/ic_overflow_24dp"
+        app:tint="?toolbarIconColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
