--- a/app/src/main/res/color/browser_icon_color_selector_dark.xml
+++ b/app/src/main/res/color/browser_icon_color_selector_dark.xml
@@ -16,6 +16,6 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="false" android:color="?attr/bottomBarIconColorDisabled" />
-    <item android:state_enabled="true" android:color="?bottomBarIconColor"/>
+    <item android:state_enabled="false" android:color="@color/midGray" />
+    <item android:color="@color/grayish"/>
 </selector>
