--- a/app/src/main/res/color/browser_icon_color_selector_light.xml
+++ b/app/src/main/res/color/browser_icon_color_selector_light.xml
@@ -15,13 +15,7 @@
   ~ limitations under the License.
   -->
 
-<resources>
-
-    <style name="BrowserIconMenuItem">
-        <item name="android:paddingTop">6dp</item>
-        <item name="android:paddingBottom">6dp</item>
-        <item name="android:background">?selectableItemBackground</item>
-        <item name="android:tint">@color/bottom_bar_icon_color_selector</item>
-    </style>
-
-</resources>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_enabled="false" android:color="@color/pinkish_grey_two" />
+    <item android:color="@color/grayishBrown"/>
+</selector>
