--- a/app/src/main/res/color/browser_menu_text.xml
+++ b/app/src/main/res/color/browser_menu_text.xml
@@ -17,6 +17,6 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="?attr/bottomBarIconColorDisabled" android:state_enabled="false" />
-    <item android:color="?attr/omnibarTextColor" />
+    <item android:color="?attr/browserMenuTextColorDisabled" android:state_enabled="false" />
+    <item android:color="?attr/browserMenuTextColor" />
 </selector>
