--- a/app/src/main/res/layout/view_bookmark_entry.xml
+++ b/app/src/main/res/layout/view_bookmark_entry.xml
@@ -79,7 +79,7 @@
         android:paddingEnd="14dp"
         android:scaleType="center"
         android:tint="?toolbarIconColor"
-        android:src="@drawable/ic_overflow_bookmarks_24dp"
+        android:src="@drawable/ic_overflow"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
