fixed colors for dialogs in settings screen

--- a/app/src/main/res/layout/settings_automatically_clear_when_fragment.xml
+++ b/app/src/main/res/layout/settings_automatically_clear_when_fragment.xml
@@ -33,6 +33,7 @@
 
         <RadioButton
             android:id="@+id/settingAppExitOnly"
+            style="@style/DaxDialogRadioButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -43,6 +44,7 @@
 
         <RadioButton
             android:id="@+id/settingInactive5Seconds"
+            style="@style/DaxDialogRadioButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -55,6 +57,7 @@
 
         <RadioButton
             android:id="@+id/settingInactive5Mins"
+            style="@style/DaxDialogRadioButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -65,6 +68,7 @@
 
         <RadioButton
             android:id="@+id/settingInactive15Mins"
+            style="@style/DaxDialogRadioButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -75,6 +79,7 @@
 
         <RadioButton
             android:id="@+id/settingInactive30Mins"
+            style="@style/DaxDialogRadioButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -85,6 +90,7 @@
 
         <RadioButton
             android:id="@+id/settingInactive60Mins"
+            style="@style/DaxDialogRadioButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
