--- a/app/src/main/res/layout/settings_automatically_clear_what_fragment.xml
+++ b/app/src/main/res/layout/settings_automatically_clear_what_fragment.xml
@@ -31,6 +31,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <RadioButton
+            style="@style/DaxDialogRadioButton"
             android:id="@+id/settingNone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,6 +42,7 @@
             android:text="@string/settingsAutomaticallyClearWhatOptionNone" />
 
         <RadioButton
+            style="@style/DaxDialogRadioButton"
             android:id="@+id/settingTabsOnly"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -51,6 +53,7 @@
             android:text="@string/settingsAutomaticallyClearWhatOptionTabs" />
 
         <RadioButton
+            style="@style/DaxDialogRadioButton"
             android:id="@+id/settingTabsAndData"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
